# depsaw

./: CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md
.github/workflows/: release.yml  test.yml
design/: finding-highest-impact-deps.md
examples/: bazel-distfile-output.yaml  dependencies.ndjson
src/: analyzer.rs  bazel.rs  git.rs  main.rs
src/algorithms/: mod.rs  most_unique_triggers.rs  trigger_scores.rs
src/operations/: mod.rs
