[package]
name = "depsaw"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
csv = "1.3"
log = "0.4"
env_logger = "0.10"
dashmap = "6.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rkyv = "0.8.8"
